--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,46 @@
 name: Deploy ircstore
 
 on:
- push:
-   branches: [main]
- workflow_dispatch:
+  push:
+    branches: [main]
+  workflow_dispatch:
+
+env:
+  PROJECT_DIR: rotko-irctore
+  MONITORED_ROOM: "#support,#dev,#rotko,#penumbra,#polkadot,#kusama"
 
 jobs:
- deploy:
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v3
-     
-     - name: Build Docker image
-       run: |
-         docker build -t ircstore:latest .
-         docker save ircstore:latest | gzip > ircstore.tar.gz
-     
-     - name: Deploy to server
-       uses: appleboy/scp-action@v0.1.5
-       with:
-         host: ${{ secrets.DEPLOY_HOST }}
-         username: ${{ secrets.DEPLOY_USER }}
-         key: ${{ secrets.DEPLOY_KEY }}
-         source: "ircstore.tar.gz,docker-compose.yml"
-         target: "/home/ircstore/"
-     
-     - name: Start services
-       uses: appleboy/ssh-action@v1.0.0
-       with:
-         host: ${{ secrets.DEPLOY_HOST }}
-         username: ${{ secrets.DEPLOY_USER }}
-         key: ${{ secrets.DEPLOY_KEY }}
-         script: |
-           cd /home/ircstore
-           docker load < ircstore.tar.gz
-           docker-compose down
-           docker-compose up -d
-           rm ircstore.tar.gz
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build Docker image
+        run: |
+          docker build -t ircstore:latest .
+          docker save ircstore:latest | gzip > ircstore.tar.gz
+
+      - name: Deploy to server
+        uses: appleboy/scp-action@v0.1.5
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          source: "ircstore.tar.gz,docker-compose.yml,.env.example"
+          target: "/home/${{ secrets.DEPLOY_USER }}/${{ env.PROJECT_DIR }}"
+
+      - name: Start services
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          script: |
+            cd /home/${{ secrets.DEPLOY_USER }}/${{ env.PROJECT_DIR }}
+            mv .env.example .env
+            sed -i "s|^IRC_CHANNELS=.*|IRC_CHANNELS="${{ env.MONITORED_ROOM }}"|" .env
+            sed -i "s|^S2_AUTH_TOKEN=.*|S2_AUTH_TOKEN=${{ secrets.S2_AUTH_TOKEN }}|" .env
+            podman load < ircstore.tar.gz
+            podman-compose down || true
+            podman-compose up -d
+            rm ircstore.tar.gz
