fix: dockerfile's debian version & podman cmd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
             mv .env.example .env
             sed -i "s|^IRC_CHANNELS=.*|IRC_CHANNELS="${{ env.MONITORED_ROOM }}"|" .env
             sed -i "s|^S2_AUTH_TOKEN=.*|S2_AUTH_TOKEN=${{ secrets.S2_AUTH_TOKEN }}|" .env
-            podman load < ircstore.tar.gz
+            podman load -i ircstore.tar.gz
             podman-compose down || true
             podman-compose up -d
             rm ircstore.tar.gz
