--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
  web:
    image: ircstore:latest
    container_name: ircstore-web
-   command: /usr/local/bin/ircstore-web
+   command: ["/usr/local/bin/ircstore-web", "--bind", "0.0.0.0", "--port", "8080"]
    restart: unless-stopped
    env_file: .env
    environment:
